--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "url": "http://github.com/kriskowal/q-io.git"
   },
   "dependencies": {
-    "q": "^1.0.1",
-    "qs": "^1.2.1",
+    "bluebird-q": "^2.1.1",
+    "qs": "^6.8.0",
     "url2": "^0.0.0",
-    "mime": "^1.2.11",
+    "mime": "^2.4.4",
     "mimeparse": "^0.1.4",
-    "collections": "^0.2.0"
+    "collections": "~5.1.x"
   },
   "devDependencies": {
-    "jshint": "^0.9.1",
-    "cover": "^0.2.8",
-    "jasmine-node": "^1.7",
+    "jshint": "^2.10.2",
+    "cover": "^0.2.9",
+    "jasmine-node": "^3.0.0",
     "opener": "^1.3"
   },
   "scripts": {
