--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "http://github.com/kriskowal/q-io.git"
   },
   "dependencies": {
-    "bluebird-q": "^2.1.1",
+    "bluebird-q": "github:marchant/bluebird-q",
     "qs": "^6.8.0",
     "url2": "^0.0.0",
     "mime": "^2.4.4",
